--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portifolio-lucas",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://lucasccgomes.github.io/portifolio-lucas",
   "type": "module",
   "scripts": {
     "dev": "vite",
