--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "homepage": "https://lucasccgomes.github.io/portifolio-lucas",
-  "type": "module",
-  "scripts": {
+  "type": "module","scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
