--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "homepage": "https://lucasccgomes.github.io/portifolio-lucas",
-  "type": "module","scripts": {
+  "type": "module",
+  "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "vite",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
