add: deploy workflow

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portifolio-lucas",
   "private": true,
   "version": "0.0.0",
-  "homepage": "./",
+  "homepage": "https://lucasccgomes.github.io/portifolio-lucas/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
